[package]
name = "tic_tac_toe"
version = "0.1.0"
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.2"
crossbeam-channel = "0.4"
